--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -47,7 +47,7 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.theATL.social
-  # baseUrl: /your-repo-name
+  baseUrl: /theatl-social-status-v2
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "status.theATL.social is provided by **Upptime**, the open-source uptime monitor and status page, powered entirely by GitHub."
